--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,10 @@
 </head>
 
 <body>
+    <!-- My profile Image -->
     <img src="https://avatars.githubusercontent.com/u/93527295?v=4" class="profileimage">
 
+    <!-- My Texts -->
     <div id="aboutMe">
         Hello, I'm GuineaPigUuhh, I'm a little dreamer, with the dream of becoming a programmer
     </div>
