--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
 </head>
 
 <body>
-    <!-- My profile Image -->
+    <img src="https://raw.githubusercontent.com/GuineaPigUuhh/GuineaPigUuhh/main/Default/background.png" class="background">
     <img src="https://avatars.githubusercontent.com/u/93527295?v=4" class="profileimage">
-
-    <!-- My Texts -->
     <div id="aboutMe">
-        Hello, I'm GuineaPigUuhh, I'm a little dreamer, with the dream of becoming a programmer
+        Hi, I'm GuineaPigUuhh, a Programmer and an Artist
     </div>
-    <div id="socials">
-        Youtube: <a href="https://www.youtube.com/channel/UCdOS2LIS1up0eeE3KNqlgqg">GuineaPigUuhh</a> <br>
-        Github: <a href="https://github.com/GuineaPigUuhh">GuineaPigUuhh</a> <br>
-        Discord Nick: guineapiguuhh7841 <br>
-    </div>
+    <a href="https://www.youtube.com/channel/UCdOS2LIS1up0eeE3KNqlgqg">
+        <img src="https://cdn.icon-icons.com/icons2/2428/PNG/512/youtube_black_logo_icon_147044.png" style="width: 65;" class="social">
+    </a>
 </body>
